--- a/src/app/BackOffice/sidebar-back/sidebar-back.component.html
+++ b/src/app/BackOffice/sidebar-back/sidebar-back.component.html
@@ -1,9 +1,12 @@
-<nav class="sidebar sidebar-offcanvas col-lg-3 col-md-4" id="sidebar">
+
+<nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
+    <li class="nav-item">
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <i class="icon-layout menu-icon"></i>
-        <span class="menu-title">UI Elements</span>
+        <span class="menu-title">Dashboard</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="ui-basic">
@@ -17,7 +20,7 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
         <i class="icon-columns menu-icon"></i>
-        <span class="menu-title">Form elements</span>
+        <span class="menu-title">Rendez vous</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="form-elements">
@@ -29,7 +32,7 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
         <i class="icon-bar-graph menu-icon"></i>
-        <span class="menu-title">Charts</span>
+        <span class="menu-title">Convention</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="charts">
@@ -41,7 +44,7 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
         <i class="icon-grid-2 menu-icon"></i>
-        <span class="menu-title">Tables</span>
+        <span class="menu-title">Fiche</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="tables">
@@ -53,7 +56,7 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
         <i class="icon-contract menu-icon"></i>
-        <span class="menu-title">Icons</span>
+        <span class="menu-title">Ordonnance</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="icons">
@@ -65,7 +68,7 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
         <i class="icon-head menu-icon"></i>
-        <span class="menu-title">User Pages</span>
+        <span class="menu-title">Forum</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="auth">
@@ -78,7 +81,7 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
         <i class="icon-ban menu-icon"></i>
-        <span class="menu-title">Error pages</span>
+        <span class="menu-title">Evenement</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="error">
@@ -91,7 +94,7 @@
     <li class="nav-item">
       <a class="nav-link" href="pages/documentation/documentation.html">
         <i class="icon-paper menu-icon"></i>
-        <span class="menu-title">Documentation</span>
+        <span class="menu-title">Reclamation</span>
       </a>
     </li>
   </ul>
