--- a/src/assets/BackOffice/css/vertical-layout-light/style.css
+++ b/src/assets/BackOffice/css/vertical-layout-light/style.css
@@ -28433,13 +28433,14 @@ div.tagsinput span.tag a {
 
 .main-panel {
   transition: width 0.25s ease, margin 0.25s ease;
-  /* width: calc(100% - 235px);*        */
+  width: 100vw;
   min-height: calc(100vh - 60px);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
 }
+
 
 @media (max-width: 991px) {
   .main-panel {
