--- a/src/app/FrontOffice/header-front/header-front.component.html
+++ b/src/app/FrontOffice/header-front/header-front.component.html
@@ -66,7 +66,7 @@
 				  </li>
 
 				  <li class="nav-item active">
-					<a class="nav-link" href=home>Reclamation</a>
+					<a class="nav-link" href="/reclamation">Reclamation</a>
 				  </li>
 	
 			</ul>
