--- a/src/app/BackOffice/liste-reclamation/liste-reclamation.component.html
+++ b/src/app/BackOffice/liste-reclamation/liste-reclamation.component.html
@@ -1,49 +1,55 @@
-
-        <div class="container-fluid">
-
-  <div class="row mt-5">
-
-    <div class="main-panel">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 main-panel">
       <div class="content-wrapper">
-          <div class="row">
-           
-            
-  
- 
-      <div class="col-lg-12 grid-margin stretch-card">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Reclamation Table</h4>
-            <div class="table-responsive">
-              <table class="reclamation-table mt-5 table table-striped">
-                <thead>
-                  <tr>
-                    <th>Description</th>
-                    <th>Date</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let reclamation of reclamations">
-                    <td>{{ reclamation.descriptionRec }}</td>
-                    <td>{{ reclamation.dateRec | date: 'dd/MM/yyyy' }}</td>
-                    <td>
-                      <span [ngClass]="{'status-circle': true, 'pending': reclamation.status === 'pending', 'approved': reclamation.status === 'approved'}"></span>
-                      <span class="status-text">{{ reclamation.status }}</span>
-                    </td>
-                    <td>
-                      <button class="btn btn-danger mr-2" (click)="confirmDelete(reclamation.idRec)">Delete</button>
-                      <button class="btn btn-dark btn-icon-text" (click)="navigateToModify(reclamation.idRec)">Modify</button>
-                    </td>
-                    
-                  </tr>
-                </tbody>
-              </table>
+        <div class="row">
+          <div class="col-md-12 grid-margin">
+            <div class="row">
+              <div class="col-12 col-xl-8 mb-4 mb-xl-0">
+                <h3 class="font-weight-bold">Welcome Aamir</h3>
+                <h6 class="font-weight-normal mb-0">All systems are running smoothly! You have <span class="text-primary">3 unread alerts!</span></h6>
+              </div>
             </div>
           </div>
         </div>
+
+        <div class="col-lg-12 grid-margin stretch-card">
+          <div class="card">
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="reclamation-table mt-5 table table-striped">
+                  <thead>
+                    <tr>
+                      <th>id</th>
+                      <th>Description</th>
+                      <th>Date</th>
+                      <th>Status</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let reclamation of reclamations">
+                      <td>{{ reclamation.idRec }}</td>
+                      <td>{{ reclamation.descriptionRec }}</td>
+                      <td>{{ reclamation.dateRec | date: 'dd/MM/yyyy' }}</td>
+                      <td>
+                        <span [ngClass]="{'status-circle': true, 'pending': reclamation.status === 'pending', 'approved': reclamation.status === 'approved'}"></span>
+                        <span class="status-text">{{ reclamation.status }}</span>
+                      </td>
+                      <td>
+                        <button class="btn btn-danger mr-2" (click)="confirmDelete(reclamation.idRec)">Delete</button>
+                        <button class="btn btn-dark btn-icon-text" (click)="navigateToModify(reclamation.idRec)">Modify</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="error" class="error">{{ error }}</div>
       </div>
-      
-      <div *ngIf="error" class="error">{{ error }}</div>
     </div>
+  </div>
+</div>
