--- a/src/app/BackOffice/sidebar-back/sidebar-back.component.html
+++ b/src/app/BackOffice/sidebar-back/sidebar-back.component.html
@@ -92,7 +92,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="pages/documentation/documentation.html">
+      <a class="nav-link" href="/admin/reclamation">
         <i class="icon-paper menu-icon"></i>
         <span class="menu-title">Reclamation</span>
       </a>
