--- a/src/app/FrontOffice/header-front/header-front.component.html
+++ b/src/app/FrontOffice/header-front/header-front.component.html
@@ -65,9 +65,13 @@
 					<a class="nav-link" href=home>Evenement</a>
 				  </li>
 
-				  <li class="nav-item active">
-					<a class="nav-link" href="/reclamation">Reclamation</a>
-				  </li>
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Reclamation<i class="icofont-thin-down"></i></a>
+					<ul class="dropdown-menu" aria-labelledby="dropdown02">
+						<li><a class="dropdown-item" href="/reclamation">New Claim</a></li>
+						<li><a class="dropdown-item" href="/reponse">Tickets</a></li>
+					</ul>
+			  	</li>
 	
 			</ul>
 		  </div>
