--- a/src/app/BackOffice/reclamation-details/reclamation-details.component.html
+++ b/src/app/BackOffice/reclamation-details/reclamation-details.component.html
@@ -3,23 +3,46 @@
     <div class="col-lg-12 main-panel">
       <div class="content-wrapper">
         <div class="row">
-          <div class="col-7 grid-margin stretch-card">
+          <div class="col-4 grid-margin stretch-card">
             <div class="card">
               <div class="card-body">
                 <blockquote class="blockquote">
                   <h4 class="card-title">Reclamation N° {{ reclamation?.idRec }}</h4>
                   <div *ngIf="reclamation">
-                    <p><span class="semi-bold-text">Description:</span> {{ reclamation.descriptionRec }}</p>
-                    <p><span class="semi-bold-text">Date:</span> {{ reclamation.dateRec | date: 'dd/MM/yyyy' }}</p>
-                    <p><span class="semi-bold-text">Status:</span> <span [ngClass]="{'text-success': reclamation.status === 'resolved', 'text-danger': reclamation.status === 'pending'}">{{ reclamation.status }}</span></p>
+                      <p><span class="semi-bold-text">Date:</span> {{ reclamation.dateRec | date: 'dd/MM/yyyy' }}</p>
+                    <p><span class="semi-bold-text">Status:</span> 
+                      <span [ngClass]="{'text-success': reclamation.status === 'resolved', 'text-danger': reclamation.status === 'pending'}">{{ reclamation.status }}</span>
+                    </p>
+                    <p><span class="semi-bold-text">Priority:</span> {{ priority }}</p> <!-- Display priority here -->
                   </div>
                 </blockquote>
               </div>
             </div>
           </div>
-          
+          <div class="col-7 grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Chat Box</h4>
+                <div *ngIf="reclamation">
+                  <p class="text-white bg-dark pl-1"><span class="semi-bold-text">User:</span> {{ reclamation.descriptionRec }}</p>
+                </div>
+                <div *ngIf="responses.length > 0">
+                  <div *ngFor="let response of responses" class="card mb-1">
+                    <!-- Display response details here -->
+                    <ul class="list-arrow" style="margin-bottom: 0;"> <!-- Add inline style to remove margin -->
+                      <li><span class="semi-bold-text">Admin:</span> {{ response.contenuRep }}</li>
+                      <!-- Add more details as needed -->
+                    </ul>
+                  </div>
+                </div>
+                
+                <div *ngIf="responses.length === 0">
+                  No responses available.
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-12 grid-margin stretch-card">
-            
             <div class="card">
               <div class="card-body">
                 <div *ngIf="submissionSuccess" class="col-12 text-success mb-3 p-2" style="background-color: #d4edda; border-radius: 5px;">Response sent successfully
