--- a/src/app/BackOffice/reclamation-details/reclamation-details.component.html
+++ b/src/app/BackOffice/reclamation-details/reclamation-details.component.html
@@ -27,7 +27,7 @@
                     </p>
                     <p>
                       <span class="semi-bold-text">Priority:</span>
-                      {{ priority }}
+                      {{ reclamation.priority }}
                     </p>
                     <!-- Display priority here -->
                   </div>
