--- a/src/app/BackOffice/dashboard/dashboard.component.html
+++ b/src/app/BackOffice/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 main-panel">
+      <div class="content-wrapper">
+        <div class="row"></div>
+        <h1>test</h1>
+      </div>
+    </div>
+  </div>
+</div>
