--- a/src/app/BackOffice/dashboard/dashboard.component.html
+++ b/src/app/BackOffice/dashboard/dashboard.component.html
@@ -2,8 +2,20 @@
   <div class="row">
     <div class="col-lg-12 main-panel">
       <div class="content-wrapper">
-        <div class="row"></div>
-        <h1>test</h1>
+        <div class="dashboard">
+          <h1>Dashboard</h1>
+          <!-- Other dashboard content here -->
+          <div class="col-lg-6 grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <div
+                  id="lineChart"
+                  style="min-width: 310px; height: 400px; margin: 0 auto"
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
