--- a/src/app/FrontOffice/ajouterreclamation/ajouterreclamation.component.html
+++ b/src/app/FrontOffice/ajouterreclamation/ajouterreclamation.component.html
@@ -8,7 +8,7 @@
             <h1 class="text-capitalize mb-5 text-lg">Reclamation</h1>
           </div>
         </div>
-      </div>/**/
+      </div>
     </div>
   </section>
 <section class="section appoinment">
